--- a/F-rn-ndo/estilos.css
+++ b/F-rn-ndo/estilos.css
@@ -5,7 +5,7 @@ body {
     padding: 0;
     background: url("images/fondo.jpg") no-repeat center center fixed;
     background-size: cover;
-    color: #fff;
+    color: #ffffff;
     text-align: center;
 }
 
