--- a/TheRafaMan06/pasatiemposver2/style.css
+++ b/TheRafaMan06/pasatiemposver2/style.css
@@ -177,7 +177,7 @@ footer {
     backdrop-filter: blur(10px);
     border-radius: 15px;
     padding: 20px;
-    text-align: center;
+    text-align: left;
     border: 1px solid rgba(255, 255, 255, 0.2);
     box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
     color: #330505;
