--- a/MiguelABanda/pasatiempos2/diseño.css
+++ b/MiguelABanda/pasatiempos2/diseño.css
@@ -24,3 +24,12 @@ h2 {
     text-align: center;
     font-size: xx-large;
 }
+
+.btn {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: white;
+  text-decoration: none;
+  border-radius: 5px;
+}
