--- a/FernandaGomezG/practica3/estilos.css
+++ b/FernandaGomezG/practica3/estilos.css
@@ -1,11 +1,28 @@
 .titulos {
-    border: 2px solid black;
-    margin: 10px;
-    background-color: pink;
+    border-radius: 15px ;
+    margin: 15px;
+    background-color: rgb(233, 233, 156);
+    border-color: black;
+    border: 3px;
+    border-style: solid;
 }
+
+.textostyle {
+    border-radius: 15px ;
+    background-color: rgb(233, 233, 156);
+    border: 2px solid black;
+    display: inline-block;
+    margin: 15px;
+    padding: 10px;
+    position: relative;
+}
+
+
 .concertimg {
     float: left;
     width: 300px;
-    margin-right: 15px;
-    margin-bottom: 15px;
+    margin-left: 20px;
+    position: relative;
+    bottom: 70px;
 }
+
