--- a/SunnyWiltshire/P2v1/styles.css
+++ b/SunnyWiltshire/P2v1/styles.css
@@ -1,9 +1,9 @@
 
-body.m{
+body{
     background-color: rgb(244, 213, 153);
 }
 
-aside.m{
+aside{
     padding: 20px;
     background: #c4560dc1;
     border: 2px solid #9c59009f;
@@ -21,11 +21,9 @@ nav a {
   color: rgb(185, 112, 23);
   font-weight: bold;
 }
-body.p1{
-    background-color: rgb(213, 131, 205);
-}
 
-h1.m{
+
+h1{
     color: #eb7676;
     text-align: center;
 }
@@ -35,52 +33,9 @@ h1.m{
     text-align: center;
 }
 
-p.m{
+p{
     color: #f4c88f;
     text-align: justify;
-}
-
-body.p1{
-    background-color: rgb(171, 126, 219);
-}
-
-aside.p1{
-    padding: 20px;
-    background: #6b4295;
-    border: 3px dotted purple;
-}
-hr.p1 {
-    border: none;
-    border-top: 3px dotted rgba(128, 0, 128, 0.673);
-    height: 3px;
-    margin: 20px 0;            
-}
-
-h1.p1{
-    color: rgb(23, 13, 51);
-    text-align: center;
-}
-
-h2{
-    color: rgb(92, 8, 92);
-    text-align: center;
-    font-style: italic;
-}
-
-h3{
-    color: darkmagenta;
-    text-align: center;
-    font-style: italic;
-}
-
-h4{
-    font-style: italic;
-    color: darkmagenta;
-}
-
-p{
-    text-align: justify;
-
 }
 
 iframe{
