--- a/AlejandroRmzEsc/assets/css/styles.css
+++ b/AlejandroRmzEsc/assets/css/styles.css
@@ -1,30 +1,52 @@
 body{
     background-color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
-.head{
+
+header{
+    padding: 10px 0px 10px 15px;
     width: 100%;
     height: 100px;
     color: lightgrey;
     display: grid;
     place-items: center;
     font-size: 30px;
+    text-shadow: -3px 13px 11px rgba(206,66,245,0.83);
+}
+.content{
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    max-width: 70%;
+    background-color: gray;
+    align-items: center;
+    flex-wrap: wrap;
+    align-content: space-evenly;
+    gap: 30px;
+}
+.evidencia{
+    border:  5px solid #fff;
+    border-radius: 10px;
+    width: 40%;
 }
 
-nav {
-    padding: 30PX;
+.opcion {
     height: 100 vh;
-    width: 70vw;
+    width: 100%;
     display: flex;
     align-items: center;
+    align-content: space-evenly;
     justify-content: space-around;
-    margin: auto;
 }
 a{
     position: relative;
     text-decoration: none;
     font-family: 'Poppins', sans-serif;
     color: lightgray;
-    font-size: 18px;
+    font-size: 10px;
     letter-spacing: .5px;
     padding: 0 10px;
 }
@@ -47,3 +69,9 @@ a:hover{
 a:hover:after{
     width: 100%;
 }
+/*.evidencia{
+    width: 500px;
+    height: 500 px;
+    border-color: red;
+    color: #ffffff;
+}*/
