--- a/ernesgarcia06/pasatiemposver2/estilos.css
+++ b/ernesgarcia06/pasatiemposver2/estilos.css
@@ -36,14 +36,18 @@ body.menu{
     position: absolute;
     right: 120px;
     top: 80px; 
+    width: 250px; 
 }
 
-@media (max-widht: 768px) {
-    main, aside {
-        float: none;
-        width: 100%;
+
+@media (max-width: 768px) {
+    .contenido {
+        position: static;   
+        width: 100%;        
+        margin-top: 20px;  
     }
-    aside{
-        margin-top: 20px;
+
+    main {
+        width: 100%;
     }
 }
