Modificación de estilos

--- a/Bere-ops/Pasatiempos_Ver2/styles.css
+++ b/Bere-ops/Pasatiempos_Ver2/styles.css
@@ -93,10 +93,11 @@ caption {
 }
 
 form {
-  background: tan;
-  border: 1px solid lawngreen;
+  background: pink;
+  border: 3px solid white;
   border-radius: 8px;
   padding: 16px;
+  text-align: center;
 }
 
 img {
@@ -118,4 +119,10 @@ img {
 
 section {
   margin-bottom: 50px;
+}
+
+iframe {
+  display: block;      
+  margin: 0 auto;     
+  border-radius: 10px;
 }
