--- a/Marikve7/pasatiempos2/estilo.css
+++ b/Marikve7/pasatiempos2/estilo.css
@@ -4,7 +4,7 @@ h1 {
     color: rgb(96, 3, 96);
 }
 
-section {
+section, nav {
     border:3px double rgb(162, 103, 162);
     background-color: rgb(231, 215, 231);
 }
@@ -19,4 +19,16 @@ img {
 
 header {
     color: rgb(11, 11, 11);
+}
+
+a {
+    color: rgb(137, 65, 137);
+}
+
+mark {
+    background-color: plum;
+}
+
+th {
+    background-color: rgb(162, 103, 162);
 }
