--- a/1jecc/pasatiempos_practica3/estilos.css
+++ b/1jecc/pasatiempos_practica3/estilos.css
@@ -89,3 +89,15 @@
     width: 1470px;
     height: 800px;
 }
+
+
+.caja_sombreada_lucha{
+    padding: 20px;
+    border-radius: 8px;
+    background-color: rgb(226, 241, 157);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.9);
+    color: #000000;
+    margin-bottom: 20px;
+    width: 1470px;
+    height: 800px;
+}
