pasatiempo 1 css y sus complementos

--- a/F-rn-ndo/pasatiemposv2/secciones/estilo_secciones.css
+++ b/F-rn-ndo/pasatiemposv2/secciones/estilo_secciones.css
@@ -36,7 +36,7 @@
     font-family: 'Courier New', Courier, monospace;
     margin: 0;
     padding: 0;
-    background: url("images/fondo.jpg") no-repeat center center fixed;
+    background: url("images/fortnite.jpg") no-repeat center center fixed;
     background-size: cover;
     color: #ffffff;
     text-align: center;
