--- a/IlseOjeda/estilos.css
+++ b/IlseOjeda/estilos.css
@@ -43,7 +43,7 @@ h2 {
     margin: 20px 0;           
     border-radius: 10px;       
     background-color: #f9fff9;  
-    box-shadow: 2px 2px 8px rgba(0,0,0,0.1); /
+    box-shadow: 2px 2px 8px rgba(0,0,0,0.1); 
 }
 
 footer {
