--- a/NerickRamirez/PasatiemposV2/estilos.css
+++ b/NerickRamirez/PasatiemposV2/estilos.css
@@ -65,9 +65,13 @@ footer {
 }
 
 body {
-    background-color: rgb(139, 160, 177);
+  background-color: rgb(139, 160, 177);
 }
 
 form {
   margin-top: 20px;
+}
+
+.bodyev {
+  background-color: darkgrey;
 }
