correccion hoja de estilos css

--- a/gfuelinme/hoja-de-estilos.css
+++ b/gfuelinme/hoja-de-estilos.css
@@ -9,7 +9,7 @@ body {
     padding: 20px;
 }
 
-#header-practicas {
+#header-evidencias {
     font-family: monospace;
     color: black;
     background-color: darkgray;
