cambie el estilo

--- a/IlseOjeda/estilos.css
+++ b/IlseOjeda/estilos.css
@@ -6,6 +6,7 @@ body {
     color: #333;
 }
 
+
 header {
     background-color: #f1989b;
     color: white;
@@ -13,9 +14,11 @@ header {
     text-align: center;
 }
 
+
 main {
     padding: 20px;
 }
+
 
 h2 {
     color: #333;
@@ -46,6 +49,7 @@ h2 {
     box-shadow: 2px 2px 8px rgba(0,0,0,0.1); 
 }
 
+
 footer {
     background-color: #c88e83;
     color: white;
@@ -57,11 +61,17 @@ footer {
 footer p {
     display: flex;
     justify-content: center;
-    align-items
+    align-items: center;
     margin: 0;
 }
 
 footer .logo-footer {
     width: 30px;  
     height: auto;
+    transition: transform 0.3s ease;
 }
+
+footer .logo-footer:hover {
+    transform: scale(1.2) rotate(10deg); 
+}
+
