--- a/IlseOjeda/estilos.css
+++ b/IlseOjeda/estilos.css
@@ -24,6 +24,16 @@ h2 {
     color: #333;
 }
 
+h2 {
+    position: relative;
+    transition: all 0.4s ease;
+}
+
+h2:hover {
+    color: #ba7b7c;
+    transform: translateX(5px);   /* ligero desplazamiento lateral */
+}
+
 
 .links ul {
     list-style-type: square;
