Apliqué hover a mi botón. Pequeñas modificaciones

--- a/ErickLTI/boton_index/boton_index.css
+++ b/ErickLTI/boton_index/boton_index.css
@@ -1,4 +1,4 @@
-#a24 {
+#a24 a {
     background-color: salmon;
     border: 5px groove red;
     font-size: 15px;
@@ -7,4 +7,11 @@
     text-align: center;
     margin-top: 8px;
     margin-bottom: 8px;
+    display: block;
+    color: black;
+}
+
+#a24 a:hover {
+    background-color: red;
+    color: white;
 }
