--- a/IlseOjeda/estilos.css
+++ b/IlseOjeda/estilos.css
@@ -7,7 +7,7 @@ body {
 }
 
 
-header {
+header {                             
     background-color: #f1989b;
     color: white;
     padding: 20px;
@@ -31,7 +31,7 @@ h2 {
 
 h2:hover {
     color: #ba7b7c;
-    transform: translateX(5px);   /* ligero desplazamiento lateral */
+    transform: translateX(5px);   
 }
 
 
@@ -64,8 +64,10 @@ footer {
     background-color: #c88e83;
     color: white;
     text-align: center;
-    padding: 10px;
+    padding: 10px ;
     margin-top: 20px;
+    font-family: "Georgia", "Times New Roman", serif; 
+    font-style: italic;
 }
 
 footer p {
@@ -76,7 +78,7 @@ footer p {
 }
 
 footer .logo-footer {
-    width: 30px;  
+    width: 35px;  
     height: auto;
     transition: transform 0.3s ease;
 }
@@ -84,4 +86,5 @@ footer .logo-footer {
 footer .logo-footer:hover {
     transform: scale(1.2) rotate(10deg); 
 }
+
 
