Estilo de nombre

--- a/TheRafaMan06/Style_name/style.css
+++ b/TheRafaMan06/Style_name/style.css
@@ -1,6 +1,7 @@
 #a01 {
     color: #5d2417;
-    padding-bottom: 30px;
+    padding-top: 20px;
+    padding-bottom: 50px;
     text-decoration: none;
     transition: all 0s ease;
 }
