Selector universal agregado, imagenes agregadas y modificación a index.html y estilos.css

--- a/aLe.php27/pasatiempos_v2/estilos.css
+++ b/aLe.php27/pasatiempos_v2/estilos.css
@@ -1,4 +1,8 @@
 /** Clases de Index **/
+#indexuni * {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
 .bodyindex{
 	margin: 0;
     padding: 0;
