Se creó la estructura de la pagina de los selectores y se modificaron los estilos CSS

--- a/Hugo-0699/pasatiemposmod/estilos.css
+++ b/Hugo-0699/pasatiemposmod/estilos.css
@@ -13,6 +13,7 @@
   color:cornsilk;
   text-align: center;
   border: 4px double black;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 .ulprincipal {
 list-style-type: none;
@@ -159,4 +160,13 @@ footer {
 .formulario-escritura th {
   border: 1px solid black;
   padding: 8px;
+}
+
+
+/* Estilos para los selectores */
+#titulo5 {
+  background-color: chocolate;
+  color: white;
+  border: 4px double black;
+  text-align: center;
 }
