selector por id css

--- a/Marikve7/pasatiempos2/estilo.css
+++ b/Marikve7/pasatiempos2/estilo.css
@@ -36,3 +36,9 @@ th {
 #n01 header {
     background-color: rgb(200, 169, 200);
 }
+
+#n02 {
+    margin: 10px;
+    border: 2px solid rgb(123, 77, 123);
+    background-color: rgb(210, 171, 210)
+}
