selector por clase css

--- a/Marikve7/pasatiempos2/estilo.css
+++ b/Marikve7/pasatiempos2/estilo.css
@@ -42,3 +42,9 @@ th {
     border: 2px solid rgb(123, 77, 123);
     background-color: rgb(210, 171, 210)
 }
+
+.letra {
+    background-color: rgb(220, 181, 220);
+    font-size: 15px;
+    font-family: 'Times New Roman', Times, serif;
+}
