selector de descendientes css

--- a/Marikve7/pasatiempos2/estilo.css
+++ b/Marikve7/pasatiempos2/estilo.css
@@ -49,3 +49,9 @@ th {
     background-color: rgb(211, 179, 211);
     color: purple;
 }
+
+#n04 li {
+    background-color: rgb(222, 186, 222);
+    color: purple;
+    margin: 15px;
+}
