selector hijos directos css

--- a/Marikve7/pasatiempos2/estilo.css
+++ b/Marikve7/pasatiempos2/estilo.css
@@ -55,3 +55,10 @@ th {
     color: purple;
     margin: 15px;
 }
+
+address > p {
+    color: purple;
+    background-color: plum;
+    width: 200px;
+}
+
